--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,12 +21,6 @@ a:hover {
   box-sizing: border-box;
 }
 
-img {
-  vertical-align: text-bottom;
-  border-radius: 100%;
-  background-color: green;
-}
-
 .container {
   width: 100vw;
   height: 100vh;
@@ -34,4 +28,12 @@ img {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+}
+
+img {
+  width: 250px;
+  height: 250px;
+  vertical-align: text-bottom;
+  border-radius: 100%;
+  background-color: green;
 }
